--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link rel="dns-prefetch" href="https://widgets.wp.com/">
 <link rel="dns-prefetch" href="https://wordpress.com/">
 <link rel="dns-prefetch" href="https://s0.wp.com/">
-<link rel="alternate" type="application/rss+xml" title="DomeOS|纯净系统下载站| » Feed" href="https://cangqiong01.wordpress.com/feed/">
-<link rel="alternate" type="application/rss+xml" title="DomeOS|纯净系统下载站| » 评论Feed" href="https://cangqiong01.wordpress.com/comments/feed/">
+<link rel="alternate" type="application/rss+xml" title="DomeOS|纯净系统下载站| » Feed" href="https://cangqiong01.github.io/">
+<link rel="alternate" type="application/rss+xml" title="DomeOS|纯净系统下载站| » 评论Feed" href="https://cangqiong01.github.io/comments/feed/">
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		function addLoadEvent(func) {
