--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ var actionbardata = {"siteID":"229390359","postID":"0","siteURL":"http:\/\/cangq
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/winpe.html/">实用的WinPE系统</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/winpe.html">实用的WinPE系统</a></div>
 
 
 
@@ -391,7 +391,7 @@ var actionbardata = {"siteID":"229390359","postID":"0","siteURL":"http:\/\/cangq
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link has-text-align-center wp-element-button" href="https://cangqiong01.github.io/linux.html/">Linux系统下载</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link has-text-align-center wp-element-button" href="https://cangqiong01.github.io/linux.html">Linux系统下载</a></div>
 
 
 
@@ -399,7 +399,7 @@ var actionbardata = {"siteID":"229390359","postID":"0","siteURL":"http:\/\/cangq
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/aboutus.html/">关于我们</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-75"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/aboutus.html">关于我们</a></div>
 </div>
 </div>
 </div>
