--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ var actionbardata = {"siteID":"229390359","postID":"0","siteURL":"http:\/\/cangq
 
 
 
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/aboutus.html/">关于我们</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://cangqiong01.github.io/aboutus.html">关于我们</a></div>
 </div>
 </div>
 </header>
